metto in pausa se tolgo le cuffie

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
     <string name="app_name">RTS</string>
-    <string name="title_activity_player">PlayerActivity</string>
     <string name="local_service_stopped">Serice stopped</string>
     <string name="local_service_started">Service started</string>
     <string name="local_service_label">Radio singing</string>
+    <string name="logo_descri">Logo</string>
+    <string name="play_pause_button">Play/Pause button</string>
     <!-- Strings used for fragments for navigation -->
 
 </resources>
