--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,9 @@
     <string name="local_service_label">Radio singing</string>
     <string name="logo_descri">Logo</string>
     <string name="play_pause_button">Play/Pause button</string>
+    <string name="follow_us_on_instagram">Follow us on Instagram</string>
+    <string name="follow_us_on_facebook">Follow us on Facebook</string>
+    <string name="follow_us_on_youtube">Follow us on YouTube</string>
     <!-- Strings used for fragments for navigation -->
 
 </resources>
