--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="follow_us_on_facebook">Follow us on Facebook</string>
     <string name="follow_us_on_youtube">Follow us on YouTube</string>
     <string name="buffering">Buffering...</string>
+    <string name="stop_button">Stop button</string>
     <!-- Strings used for fragments for navigation -->
 
 </resources>
