--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">RTS</string>
-    <string name="local_service_stopped">Serice stopped</string>
+    <string name="app_name">Radio Torriglia Sound</string>
+    <string name="local_service_stopped">Service stopped</string>
     <string name="local_service_started">Service started</string>
     <string name="local_service_label">Radio singing</string>
     <string name="logo_descri">Logo</string>
