--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="play_button">Play button</string>
     <string name="radio_running">Radio playing</string>
     <string name="radio_paused">Radio paused</string>
+    <string name="media_player_error">Media player error</string>
+    <string name="internet_not_available">Internet not available</string>
     <!-- Strings used for fragments for navigation -->
 
 </resources>
