--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -19,4 +19,5 @@
     <string name="radio_paused">Radio in pausa</string>
     <string name="media_player_error">Errore del media player</string>
     <string name="internet_not_available">Internet non disponibile</string>
+    <string name="contact_us">Contattaci</string>
 </resources>
