--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="radio_paused">Radio paused</string>
     <string name="media_player_error">Media player error</string>
     <string name="internet_not_available">Internet not available</string>
+    <string name="contact_us">Contact us</string>
     <!-- Strings used for fragments for navigation -->
 
 </resources>
