--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="follow_us_on_instagram">Follow us on Instagram</string>
     <string name="follow_us_on_facebook">Follow us on Facebook</string>
     <string name="follow_us_on_youtube">Follow us on YouTube</string>
-    <string name="buffering">Buffering…</string>
+    <string name="welcome">Welcome to Radio Torriglia Sound</string>
     <string name="stop_button">Stop button</string>
     <string name="stop">Stop</string>
     <string name="resume">Resume</string>
@@ -19,6 +19,7 @@
     <string name="media_player_error">Media player error</string>
     <string name="internet_not_available">Internet not available</string>
     <string name="contact_us">Contact us</string>
+    <string name="producer">App created by Marco Perasso</string>
     <!-- Strings used for fragments for navigation -->
 
 </resources>
