--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -21,4 +21,5 @@
     <string name="internet_not_available">Internet non disponibile</string>
     <string name="contact_us">Contattaci</string>
     <string name="producer">App creata da Marco Perasso</string>
+    <string name="open">Apri</string>
 </resources>
