--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="internet_not_available">Internet not available</string>
     <string name="contact_us">Contact us</string>
     <string name="producer">App created by Marco Perasso</string>
+    <string name="open">Open</string>
     <!-- Strings used for fragments for navigation -->
 
 </resources>
