timer su riaggancio rete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="contact_us">Contact us</string>
     <string name="producer">App created by Marco Perasso</string>
     <string name="open">Open</string>
+    <string name="network_change_detected_restarting_service">Network change detected: restarting service</string>
     <!-- Strings used for fragments for navigation -->
 
 </resources>
