--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -22,4 +22,5 @@
     <string name="contact_us">Contattaci</string>
     <string name="producer">App creata da Marco Perasso</string>
     <string name="open">Apri</string>
+    <string name="network_change_detected_restarting_service">Rilevato cambio di rete: riavvio del servizio in corso</string>
 </resources>
