--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="media_player_error">Media player error</string>
     <string name="internet_not_available">Internet not available</string>
     <string name="contact_us">Contact us</string>
-    <string name="producer">App created by Marco Perasso</string>
+    <string name="producer">Go to the developer\'s site</string>
     <string name="open">Open</string>
     <string name="network_change_detected_restarting_service">Network change detected: restarting service</string>
     <string name="connecting">Connecting…</string>
